Fix footer alignment outside app subdirecroty

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,7 @@
+.container {
+  min-height: calc(100vh - var(--footer-min-height));
+}
+
 .image {
   width: 100%;
 }
